[project]
name = "docx2md"
version = "0.1.0"
description = "Convert Word .docx files to Markdown"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
docx2md = "docx2md.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/docx2md"]
